--- a/noteIt-api/pom.xml
+++ b/noteIt-api/pom.xml
@@ -7,12 +7,14 @@
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>2.3.1.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
+
     </parent>
     <groupId>pl.brzezinski</groupId>
     <artifactId>noteit</artifactId>
     <version>0.0.1</version>
     <name>noteit</name>
     <description>Note it - manage your notes</description>
+    <packaging>war</packaging>
 
     <properties>
         <java.version>11</java.version>
@@ -26,11 +28,6 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-mail</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-mail</artifactId>
-            <version>2.0.1.RELEASE</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
